<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">classfinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="exit">Salir</string>
    <string name="begin">Iniciar</string>
    <string name="connected">--</string>
    <string name="bssid">BSSID</string>
    <string name="bssidvalue">--</string>
    <string name="rssid">RSSID</string>
    <string name="rssidvalue">--</string>
    <string name="ssid">SSID</string>
    <string name="ssidvalue">--</string>
    <string name="refresh">Actualizar</string>
    <string name="togo">¿A donde ir?</string>
    <string name="namelist">name</string>
    <string name="allcourse">Cursos FIEC</string>
    <string name="description">Description</string>
    <string name="lugar">Lugar del Sitio</string>
    <string name="place">--</string>
    <string name="btnNext">Mapa</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="option">Escoja por favor a que curso desea ir.</string>
    <string name="lugares_conocidos">Lugares Conocidos</string>
    <string name="mensaje">Si estos no son los lugares que están a su alrededor, por favor dar clic en el siguiente botón.</string>
    <string name="next">--&gt;</string>
    <string name="general">Ver ruta General</string>
    <string name="especifico">Lugares Referentes</string>
    <string name="ruta">Lugares Referentes</string>
    <string name="especi">Ver ubicación específica</string>
    <string name="pregunta">¿Lugar correcto?</string>
    <string name="ubi_usted">Imagen y descripción del lugar que usted se encuentra</string>
    <string name="ubi_destino">Imagen y descripción del aula seleccionada</string>
    <string name="Nil"/>

</resources>