<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="489dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/texttogo"
        android:layout_toLeftOf="@+id/texttogo" >
    </ListView>

    <TextView
        android:id="@+id/all_courses_fiec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/allcourse" />

    <TextView
        android:id="@+id/texttogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/togo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="345dp"
        android:layout_height="345dp"
        android:layout_alignTop="@android:id/list"
        android:layout_toRightOf="@android:id/list"
        android:contentDescription="TODO"
        android:src="@drawable/ic_imagen" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image1"
        android:layout_centerHorizontal="true"
        android:text="@string/lugar" />

    <TextView
        android:id="@+id/textplace"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textDescription"
        android:layout_below="@+id/textDescription"
        android:text="TextView" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textplace"
        android:layout_alignParentBottom="true"
        android:text="@string/exit" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/image1"
        android:text="@string/btnNext"
        android:visibility="invisible" />

</RelativeLayout>